--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             60s con la creación de las hojas "Letraset" , las cuales contenian pasajes de Lorem Ipsum, y más
             recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones
             de Lorem Ipsum.</aside>
+        <img src="imagenes/whatsapp.jpg" alt="">
         <br>
         <H1>GALERIA</H1>
         <aside>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum
@@ -31,6 +32,7 @@
             Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de
             Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el
             cual incluye versiones de Lorem Ipsum.</aside>
+        <img src="imagenes/chrome.jpg" alt="">
         <footer>Copyright</footer>
     </body>
 </header>
