--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 <header>
 
     <body>
+        <nav>
+            <a href="home.html">HOME</a>
+            <a href="galeria.html">GALERIA</a>
+        </nav>
+        <div class="HOME" id="HOMELINK"></div>
         <h1>HOME</h1>
         <aside>
             Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el
@@ -23,6 +28,7 @@
             de Lorem Ipsum.</aside>
         <img src="imagenes/whatsapp.jpg" alt="">
         <br>
+        <div class="GALERIA" id="GALERIALINK"></div>
         <H1>GALERIA</H1>
         <aside>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum
             ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del
