correccion de home y galeria

--- a/galeria.html
+++ b/galeria.html
@@ -12,7 +12,7 @@
 
     <body>
         <nav>
-            <a href="home.html">HOME</a>
+            <a href="index.html">HOME</a>
             <a href="galeria.html">GALERIA</a>
         </nav>
 
