--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <body>
         <nav>
-            <a href="home.html">HOME</a>
+            <a href="index.html">HOME</a>
             <a href="galeria.html">GALERIA</a>
         </nav>
         <div class="HOME" id="HOMELINK"></div>
@@ -27,18 +27,6 @@
             recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones
             de Lorem Ipsum.</aside>
         <img src="imagenes/whatsapp.jpg" alt="">
-        <br>
-        <div class="GALERIA" id="GALERIALINK"></div>
-        <H1>GALERIA</H1>
-        <aside>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum
-            ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del
-            T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal
-            manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien
-            ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original.
-            Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de
-            Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el
-            cual incluye versiones de Lorem Ipsum.</aside>
-        <img src="imagenes/chrome.jpg" alt="">
         <footer>Copyright</footer>
     </body>
 </header>
