creacion de copyrighy con link

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones
             de Lorem Ipsum.</aside>
         <img src="imagenes/whatsapp.jpg" alt="">
-        <footer>Copyright</footer>
+        <footer>Copyright&copy;2021 <a href="#">Aviso legal</a></footer>
     </body>
 </header>
 
