creacion de listas

--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
     <link rel="stylesheet" href="estilos.css">
     <title>Home</title>
 </head>
-<header>
 
-    <body>
+<body>
+    <header>
         <nav>
-            <a href="index.html">HOME</a>
-            <a href="galeria.html">GALERIA</a>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="galeria.html">Galeria</a></li>
+            </ul>
         </nav>
+
         <div class="HOME" id="HOMELINK"></div>
         <h1>HOME</h1>
         <aside>
@@ -28,7 +31,7 @@
             de Lorem Ipsum.</aside>
         <img src="imagenes/whatsapp.jpg" alt="">
         <footer>Copyright&copy;2021 <a href="#">Aviso legal</a></footer>
-    </body>
+</body>
 </header>
 
 </html>
