correccion de lista

--- a/galeria.html
+++ b/galeria.html
@@ -12,8 +12,10 @@
 
     <body>
         <nav>
-            <a href="index.html">HOME</a>
-            <a href="galeria.html">GALERIA</a>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="galeria.html">Galeria</a></li>
+            </ul>
         </nav>
 
         <div class="GALERIA" id="GALERIALINK"></div>
