--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="estilos.css">
     <title>Home</title>
 </head>
+<!-- nav>ul>li*3 creacion de golpe -->
 
 <body>
     <header>
@@ -28,7 +29,7 @@
             60s con la creación de las hojas "Letraset" , las cuales contenian pasajes de Lorem Ipsum, y más
             recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones
             de Lorem Ipsum.</aside>
-        <img src="imagenes/whatsapp.jpg" alt="">
+        <img src="images/whatsapp.jpg" alt="">
         <footer>Copyright&copy;2021 <a href="#">Aviso legal</a></footer>
 </body>
 </header>
