--- a/galeria.html
+++ b/galeria.html
@@ -27,7 +27,7 @@
             Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de
             Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el
             cual incluye versiones de Lorem Ipsum.</aside>
-        <img src="imagenes/chrome.jpg" alt="">
+        <img src="images/chrome.jpg" alt="">
         <footer>Copyright&copy;2021 <a href="#">Aviso legal</a></footer>
     </body>
 </header>
