--- a/index.html
+++ b/index.html
@@ -18,20 +18,18 @@
                 <li><a href="galeria.html">Galeria</a></li>
             </ul>
         </nav>
-
+    </header>
+    <main>
         <h1>HOME</h1>
-        <aside>
-            Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el
-            texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que
-            se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró
-            hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de
-            relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los
-            60s con la creación de las hojas "Letraset" , las cuales contenian pasajes de Lorem Ipsum, y más
-            recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones
-            de Lorem Ipsum.</aside>
-        <img src="images/whatsapp.jpg" alt="">
-        <footer>Copyright&copy;2021 <a href="#">Aviso legal</a></footer>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni minima quo velit et qui, amet reprehenderit
+            consequatur, suscipit est consequuntur maxime aut laudantium aliquid molestias quidem. Accusantium
+            repudiandae maiores animi.</p>
+        <div>
+            <img src="images/whatsapp.jpg" alt="Icono de whatsapp">
+        </div>
+    </main>
+    <footer>Copyright&copy;2021 <a href="#">Aviso legal</a></footer>
 </body>
-</header>
 
 </html>
