--- a/galeria.html
+++ b/galeria.html
@@ -17,19 +17,18 @@
                 <li><a href="galeria.html">Galeria</a></li>
             </ul>
         </nav>
-
-        <H1>GALERIA</H1>
-        <aside>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum
-            ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del
-            T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal
-            manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien
-            ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original.
-            Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de
-            Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el
-            cual incluye versiones de Lorem Ipsum.</aside>
-        <img src="images/chrome.jpg" alt="">
-        <footer>Copyright&copy;2021 <a href="#">Aviso legal</a></footer>
-    </body>
 </header>
+<main>
+    <H1>GALERIA</H1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio dolor perferendis dolorum praesentium, modi
+        tempora totam repellendus debitis dicta eaque mollitia veritatis. Dolore dicta esse error cupiditate labore qui
+        amet!</p>
+    <div>
+        <img src="images/chrome.jpg" alt="Icono de chrome">
+    </div>
+</main>
+<footer>Copyright&copy;2021 <a href="#">Aviso legal</a></footer>
+</body>
+
 
 </html>
