datos de contacto

--- a/contacto.html
+++ b/contacto.html
@@ -10,10 +10,20 @@
 </head>
 <!-- nav>ul>li*3 creacion de golpe -->
 
-<main>
-
-</main>
-<footer>Copyright&copy;2021 <a href="#">Aviso legal</a></footer>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="galeria.html">Galeria</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h1>Contacto</h1>
+        <a href="mailto:juan@neoland.es">juan@neoland.es</a>
+        <a href="916545648">Telefono</a>
+        <footer>Copyright&copy;2021 <a href="#">Aviso legal</a></footer>
 </body>
 
 </html>
