--- a/servicios.html
+++ b/servicios.html
@@ -9,8 +9,15 @@
 </head>
 
 <body>
-    <h1>Servicios</h1>
-
+    <header>
+        <h1>Servicios</h1>
+        <nav>
+            <ul>
+                <li>Hacer la compra</li>
+                <li>Lavar el coche</li>
+            </ul>
+        </nav>
+    </header>
 </body>
 
 </html>
