--- a/galeria.html
+++ b/galeria.html
@@ -15,6 +15,8 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="galeria.html">Galeria</a></li>
+                <li><a href="servicios.html">Servicios</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
 </header>
