--- a/servicios.html
+++ b/servicios.html
@@ -13,8 +13,10 @@
         <h1>Servicios</h1>
         <nav>
             <ul>
-                <li>Hacer la compra</li>
-                <li>Lavar el coche</li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="galeria.html">Galeria</a></li>
+                <li><a href="servicios.html">Servicios</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
