--- a/blog.html
+++ b/blog.html
@@ -21,20 +21,11 @@
         </nav>
     </header>
     <main>
-        <h1>HOME</h1>
+        <h1>Blog</h1>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni minima quo velit et qui, amet reprehenderit
             consequatur, suscipit est consequuntur maxime aut laudantium aliquid molestias quidem. Accusantium
             repudiandae maiores animi.</p>
-        <div>
-            <img src="images/whatsapp.jpg" alt="Icono de whatsapp">
-        </div>
-        <div>
-            <iframe width="100%" height="315" src="https://www.youtube.com/embed/-3RK0FCvAEc"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-        </div>
     </main>
     <footer>Copyright&copy;2021 <a href="#">Aviso legal</a></footer>
 </body>
