--- a/galeria.html
+++ b/galeria.html
@@ -17,6 +17,7 @@
                 <li><a href="galeria.html">Galeria</a></li>
                 <li><a href="servicios.html">Servicios</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="blog.html">Blog</a></li>
             </ul>
         </nav>
 </header>
