--- a/blog.html
+++ b/blog.html
@@ -22,10 +22,26 @@
     </header>
     <main>
         <h1>Blog</h1>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni minima quo velit et qui, amet reprehenderit
-            consequatur, suscipit est consequuntur maxime aut laudantium aliquid molestias quidem. Accusantium
-            repudiandae maiores animi.</p>
+        <section>
+            <h2>Articulos destacados</h2>
+            <article>
+                <h3>Titulo del articulo</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate eveniet temporibus,
+                    exercitationem iusto eligendi possimus. Nemo, ab perferendis quod quidem cumque, doloribus facere
+                    adipisci modi fuga voluptate porro magnam delectus.</p>
+
+            </article>
+            <article>
+                <h3>Titulo del articulo</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate eveniet temporibus,
+                    exercitationem iusto eligendi possimus. Nemo, ab perferendis quod quidem cumque, doloribus facere
+                    adipisci modi fuga voluptate porro magnam delectus.</p>
+
+            </article>
+
+        </section>
+
+
     </main>
     <footer>Copyright&copy;2021 <a href="#">Aviso legal</a></footer>
 </body>
